@@ -1,11 +1,0 @@
-## SECTION=multimedia_gtk
-
-config GLIBMM
-	tristate
-	select GLIB
-	select LIBSIGCPP
-	select GCCLIBS_CXX
-	prompt "glibmm"
-	help
-	  glibmm is the C++ interface to the glib library.
-
