@@ -2,6 +2,7 @@
 
 	* common: dbus: (re-)enable default rule for 1.6.4
 	* common: glib: (re-)enable default rule for 2.32.3
+	* common: glibmm: (re-)enable default rule for 2.30.1
 
 2013-12-02	Stephan Linz <linz@li-pro.net>
 
